--- a/package.json
+++ b/package.json
@@ -1,6 +1,24 @@
 {
-    "name": "root",
+    "name": "spectra",
     "version": "1.0.0",
-    "private": true
-  }
-  
+    "description": "Your project description",
+    "main": "server/index.js",
+    "scripts": {
+      "start": "node server/index.js",
+      "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
+    },
+    "dependencies": {
+      "express": "^4.17.1",
+      "knex": "^0.95.6",
+      "bcrypt": "^5.0.1",
+      "jsonwebtoken": "^8.5.1",
+      "dotenv": "^8.2.0",
+      "csvtojson": "^2.0.10",
+      "axios": "^0.21.1",
+      "file-saver": "^2.0.5",
+      "papaparse": "^5.3.0"
+    },
+    "devDependencies": {
+      "nodemon": "^2.0.7"
+    }
+  }  
