--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,7 @@
     "start": "node index.js",
     "start-scheduler": "node scheduler.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "cd ../client && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
@@ -29,7 +29,7 @@
     "uuid": "^10.0.0"
   },
   "engines": {
-    "node": ">=14.x.x",
-    "npm": ">=6.x.x"
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
