--- a/server/package.json
+++ b/server/package.json
@@ -29,7 +29,7 @@
     "uuid": "^10.0.0"
   },
   "engines": {
-    "node": "14.x",
-    "npm": "6.x"
+    "node": ">=14.0.0 <23.0.0",
+    "npm": ">=6.0.0 <11.0.0"
   }
 }
