--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,8 @@
     "start": "node index.js",
     "start-scheduler": "node scheduler.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ../client && npm run build --prefix ../client"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ../client && npm run build --prefix ../client",
+    "migrate-and-seed": "knex migrate:latest && knex seed:run"
   },
   "author": "",
   "license": "ISC",
