Added migration and seed scripts to deployment

--- a/server/package.json
+++ b/server/package.json
@@ -8,7 +8,8 @@
     "start-scheduler": "node scheduler.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix ../client && npm run build --prefix ../client",
-    "migrate-and-seed": "knex migrate:latest && knex seed:run"
+    "migrate": "npx knex migrate:latest",
+    "seed": "npx knex seed:run"
   },
   "author": "",
   "license": "ISC",
