--- a/server/package.json
+++ b/server/package.json
@@ -22,6 +22,7 @@
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "knex": "^3.1.0",
+    "knext": "^0.1.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "mysql2": "^3.10.1",
