--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "scripts": {
         "start": "node server/index.js",
         "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm install --prefix server && npm run build --prefix client",
-        "migrate-and-seed": "npx knex migrate:latest && npx knex seed:run"
+         "migrate": "cd server && npx knex migrate:latest --knexfile ./knexfile.js --env production"
     },
     "dependencies": {
         "axios": "^0.21.1",
